@@ -1,3 +1,11 @@
+2006-01-22 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* implemented Utils::sector_to_unit() and use it in several places
+	* (finally) fixed errors with ntfsresizing (had a lot to do with
+	  difference between MB and MiB)
+	* resizing of reiserfs now shows more detailed feedback
+	* support for TebiByte (TiB) unit
+
 2006-01-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* changed KB/MB/GB/TB to KiB/MiB/GiB/TiB after reading http://www.iec.ch/zone/si/si_bytes.htm
